[BugFix] Fix fusion plan predicate error (#41678)